# Education

./: .gitattributes  .gitignore  README.md  r.txt
projects/Algorithms/: banana.py  egg_banana.py  random_walk.py  random_walk_no_back.py  test.py
projects/BigData/: lab1.R  lab2.R  lab2_2.R  lab3.R  logit_reg_2.R  rand5.csv
projects/BigData/datasets/: rand5.csv
projects/Calcus/: LU.py  QR.py  SOR.py  bordering_method.py  gradient.py  optimal_metod.py  reverse_iterations.py  richardson.py  rotation_with_barriers.py  simple_iterations.py  square_root_method.py
projects/Clouds/: mas_operation.cu
projects/Course/: Course.ipynb  README.md  test.ipynb
projects/Differential/: cauchy_problem.py  humilyshi.py  lab 8.py  lab2.py  lab3.py  lab4.py  lab7.py  lab9.py
projects/Equations of Mathematical Physics/: Harmonic.py  Lotki-Voltera.py
projects/ML/: Credit Scoring.ipynb  iris_tree.dot  Пелагеев Д.И. lab_1.ipynb  Пелагеев Д.И. lab_2.ipynb  Пелагеев Д.И. lab_3.ipynb  Пелагеев Д.И. lab_4.ipynb  Пелагеев Д.И. lab_5.ipynb  Пелагеев Д.И. lab_6.ipynb  Пелагеев Д.И. lab_7.ipynb  Пелагеев Д.И. lab_8.ipynb  Пелагеев Д.И. lab_9, 10.ipynb
projects/Mathematical and computer modeling/: 1d.py  Lotki-Voltera.py  circle_motion.py  heatter.py  pendulum.py
projects/Neural Networks/: CEM.ipynb  CNN.ipynb  DIgits_1.ipynb  Digits_2.ipynb  Fashion.ipynb  HOME_SBER_№1.ipynb  RBF.ipynb  RBM.ipynb  RNN.ipynb  lab_1.ipynb  lab_2.ipynb  lab_3.ipynb  lab_4.ipynb  lab_6.ipynb  lec_1.ipynb  СGAN.ipynb
projects/Neural Networks/Intro AI/: Decision_tree.ipynb  Metric_classification.ipynb  ensembling.html  lab_1.ipynb  lab_2.ipynb  regression.html  Градиентный_спуск_алгоритмы_оптимизации_градиетного_спуска.html  Кластеризация.html
projects/Neural Networks/SBER/: HOME_SBER_№2(LR).ipynb  HOME_SBER_№5.ipynb  HOME_SBER_№6.ipynb  HOME_SBER_№7.ipynb  Lesson_01_Intro.ipynb  Lesson_02_Linear_Regression.ipynb  Lesson_02_classification.ipynb  Lesson_03_Decision_Trees.ipynb  Lesson_04_Ensembles.ipynb  Lesson_06_Survival_Example.ipynb  Lesson_07_Unsupervised1.ipynb  Lesson_07_Unsupervised2.ipynb
projects/Neural Networks/datasets/: house_prices.csv  test_result.csv
projects/Neural Networks/lab_5/: app.py  lab_5.ipynb
projects/OC/corss_prog/: CMakeLists.txt  README.md  help.txt
projects/OC/corss_prog/src/: program.cpp
projects/OC/proc_runner/: CMakeLists.txt  README.md  help.txt
projects/OC/proc_runner/include/: proc_runner.hpp
projects/OC/proc_runner/src/: proc_runner.cpp
projects/OC/proc_runner/tools/: proc_test.cpp
projects/OC/temp_gui_client/: CMakeLists.txt  README.md
projects/OC/temp_gui_client/src/: api_client.cpp  api_client.h  main.cpp  main_window.cpp  main_window.h
projects/OC/temp_serial_logger/: CMakeLists.txt  README.md
projects/OC/temp_serial_logger/src/: logger_main.cpp  simulator_main.cpp
projects/OC/temp_serial_logger/src/core/: csv_log.cpp  csv_log.h  time_utils.cpp  time_utils.h
projects/OC/temp_serial_logger/src/serial/: serial_port_posix.cpp  serial_port_win.cpp
projects/OC/temp_serial_logger_v2/: CMakeLists.txt  README.md
projects/OC/temp_serial_logger_v2/src/: logger_main.cpp
projects/OC/temp_serial_logger_v2/src/core/: exe_path.cpp  exe_path.h  rolling_agg.cpp  rolling_agg.h
projects/OC/temp_serial_logger_v2/src/db/: repo.cpp  repo.h  schema.cpp  schema.h  sqlite_db.cpp  sqlite_db.h
projects/OC/temp_serial_logger_v2/src/http/: server.cpp  server.h
projects/OC/temp_serial_logger_v2/src/serial/: serial_port.h
projects/OC/temp_serial_logger_v2/web/: app.js  index.html  style.css
projects/Optimizations/: coord_descent.py  dich_gold.py  gradient_descent.py  newton_raphson.py  simplex.py
(+42 files in other folders)
